--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -28,11 +28,13 @@ body * {
 }
 
 player {
-  background-image: url(../images/player.png);
+  background-image: url(../images/helicopter.png);
+  background-size: 100% 100%;
 }
 
 obstacle {
-  background-image: url(../images/wall-obstacle.png);
+  background-image: url(../images/cloud.png);
+  background-size: 100% 100%;
 }
 
 spikes {
